--- a/co.edu.uniquindio.reservaSinteticaFx/src/main/resources/co/edu/uniquindio/reservasinteticafx/reservasinteticaapp/UsuarioView.fxml
+++ b/co.edu.uniquindio.reservaSinteticaFx/src/main/resources/co/edu/uniquindio/reservasinteticafx/reservasinteticaapp/UsuarioView.fxml
@@ -1,16 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="co.edu.uniquindio.reservasinteticafx.reservasinteticaapp.controller.UsuarioController">
-  <padding>
-    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-  </padding>
-
-  <Label fx:id="welcomeText"/>
-  <Button text="Hello!" onAction="#onHelloButtonClick"/>
-</VBox>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="596.0" prefWidth="964.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.reservasinteticafx.reservasinteticaapp.viewController.UsuarioViewController">
+   <children>
+      <TabPane layoutX="7.0" layoutY="12.0" prefHeight="571.0" prefWidth="942.0" tabClosingPolicy="UNAVAILABLE" />
+  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="588.0" prefWidth="954.0">
+         <children>
+            <SplitPane dividerPositions="0.4" layoutX="-2.0" layoutY="14.0" orientation="VERTICAL" prefHeight="571.0" prefWidth="954.0">
+              <items>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="244.0" prefWidth="917.0">
+                     <children>
+                        <TextField layoutX="124.0" layoutY="88.0" prefHeight="25.0" prefWidth="215.0" />
+                     </children>
+                  </AnchorPane>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="266.0" prefWidth="917.0">
+                     <children>
+                        <TableView layoutX="11.0" layoutY="9.0" prefHeight="321.0" prefWidth="934.0">
+                          <columns>
+                            <TableColumn prefWidth="107.0" text="ID Usuario" />
+                            <TableColumn minWidth="7.0" prefWidth="185.0" text="Nombre" />
+                              <TableColumn prefWidth="213.0" text="Apellidos" />
+                              <TableColumn prefWidth="217.0" text="Direccion" />
+                              <TableColumn prefWidth="211.0" text="Telefono" />
+                          </columns>
+                        </TableView>
+                     </children>
+                  </AnchorPane>
+              </items>
+            </SplitPane>
+            <Label layoutX="46.0" layoutY="50.0" text="ID Usuario" />
+            <TextField layoutX="123.0" layoutY="46.0" prefHeight="25.0" prefWidth="215.0" />
+            <TextField layoutX="123.0" layoutY="172.0" prefHeight="25.0" prefWidth="215.0" />
+            <Label layoutX="46.0" layoutY="106.0" text="Nombre" />
+            <Label layoutX="44.0" layoutY="176.0" text="Apellidos" />
+            <Label layoutX="457.0" layoutY="50.0" text="Direccion" />
+            <TextField layoutX="557.0" layoutY="46.0" prefHeight="25.0" prefWidth="215.0" />
+            <Label layoutX="459.0" layoutY="115.0" text="Telefono" />
+            <TextField layoutX="557.0" layoutY="111.0" prefHeight="25.0" prefWidth="215.0" />
+         </children>
+      </AnchorPane>
+   </children>
+</AnchorPane>
